Fix: Color palette button, :focus state issue (#8108)
Color palette button not centered inside focus circle.
Steps to reproduce issue:
1) Click Add Block button
2) Select Paragraph
3) Go to Block properties -> Background color 
4) Click on colored circle

--- a/packages/components/src/color-palette/style.scss
+++ b/packages/components/src/color-palette/style.scss
@@ -65,8 +65,8 @@ $color-palette-circle-spacing: 14px;
 			width: 32px;
 			height: 32px;
 			position: absolute;
-			top: -3px;
-			left: -3px;
+			top: -2px;
+			left: -2px;
 			border-radius: 50%;
 		}
 	}
